--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@radix-ui/themes": "^2.0.3",
     "@tanstack/react-query": "4.7.1",
     "@tanstack/react-query-devtools": "4.7.1",
     "axios": "^1.6.2",
