--- a/package.json
+++ b/package.json
@@ -27,11 +27,13 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
+    "i18next": "^23.7.13",
     "lucide-react": "^0.294.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.11",
     "react-hook-form": "^7.48.2",
+    "react-i18next": "^14.0.0",
     "react-resizable-panels": "^1.0.5",
     "react-router-dom": "^6.20.1",
     "tailwind-merge": "^2.1.0",
