--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
     "i18next": "^23.7.13",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.294.0",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.11",
