--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-error-boundary": "^4.0.11",
     "react-hook-form": "^7.48.2",
     "react-i18next": "^14.0.0",
+    "react-intersection-observer": "^9.5.3",
     "react-resizable-panels": "^1.0.5",
     "react-router-dom": "^6.20.1",
     "tailwind-merge": "^2.1.0",
