--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-intersection-observer": "^9.5.3",
     "react-resizable-panels": "^1.0.5",
     "react-router-dom": "^6.20.1",
+    "react-string-replace": "^1.1.1",
     "tailwind-merge": "^2.1.0",
     "tailwindcss-animate": "^1.0.7",
     "yup": "^1.3.2",
