--- a/package.json
+++ b/package.json
@@ -30,11 +30,13 @@
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
     "i18next": "^23.7.13",
+    "immer": "^10.0.3",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.294.0",
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-error-boundary": "^4.0.11",
     "react-hook-form": "^7.48.2",
     "react-i18next": "^14.0.0",
