--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-resizable-panels": "^1.0.5",
     "react-router-dom": "^6.20.1",
     "react-string-replace": "^1.1.1",
+    "react-textarea-autosize": "^8.5.3",
     "tailwind-merge": "^2.1.0",
     "tailwindcss-animate": "^1.0.7",
     "yup": "^1.3.2",
