--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@emoji-mart/data": "^1.1.2",
     "@emoji-mart/react": "^1.1.1",
+    "@giphy/js-fetch-api": "^5.3.0",
+    "@giphy/react-components": "^9.2.3",
     "@hookform/resolvers": "^3.3.2",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -48,6 +50,7 @@
     "react-router-dom": "^6.20.1",
     "react-string-replace": "^1.1.1",
     "react-textarea-autosize": "^8.5.3",
+    "styled-components": "^6.1.8",
     "tailwind-merge": "^2.1.0",
     "tailwindcss-animate": "^1.0.7",
     "yup": "^1.3.2",
