feat: real time message

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,12 @@
+#NODE ENV
 VITE_NODE_ENV=
+
+#API SERVER
 VITE_APP_BASE_API=
+
+#GIPHY
+VITE_GIPHY_API_KEY=
+
+#PUSHER
+VITE_PUSHER_APP_KEY=
+VITE_PUSHER_CLUSTER=
