--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.294.0",
     "moment": "^2.30.1",
+    "pusher-js": "^8.4.0-rc2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
