--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-router-dom": "^6.20.1",
     "react-string-replace": "^1.1.1",
     "react-textarea-autosize": "^8.5.3",
+    "sonner": "^1.3.1",
     "styled-components": "^6.1.8",
     "tailwind-merge": "^2.1.0",
     "tailwindcss-animate": "^1.0.7",
